lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:5: error: type mismatch;
 found   : Int(1)
 required: String
		setPousseeDesiree(P)+1
                                     ^Lander:7: error: value - is not a member of Unit
		setPousseeDesiree(P)-1
                                    ^